correcao da mascara de cpf

--- a/changes/app/design/frontend/default/default/template/persistent/checkout/onepage/billing.phtml
+++ b/changes/app/design/frontend/default/default/template/persistent/checkout/onepage/billing.phtml
@@ -246,7 +246,7 @@
 
 // aplicando máscaras
 jQuery(function(undefined){
-    jQuery("#billing\\:taxvat").mask("999-999-999-99");
+    jQuery("#billing\\:taxvat").mask("999.999.999-99");
     jQuery("#billing\\:postcode").mask("99999-999");
     jQuery("#billing\\:telephone").mask("(99)9999-9999");
     jQuery("#billing\\:fax").mask("(99)9999-9999");
